fix menu, vatican page, ug projects, and header/paragraph spacing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,5 +1,14 @@
 /* CSS Stylesheet for index.html */
 
+/* Dr. Joyce attempting to remove space after headers */
+h2{margin-bottom:0; padding-bottom:0;}
+h3{margin-bottom:0; padding-bottom:0;}
+h4{margin-bottom:0; padding-bottom:0;}
+p{margin: 0.3em 0 0.5em;}
+
+
+
+
 body {
   background-attachment: fixed;
   margin: 0;
